# Matrix-Magiq-Liquidity

./: Cargo.toml  README.md
docs/: GRANT_PROPOSAL.md
docs/ui/: visualization.md
docs/whitepapers/: liquidity-pool.md
frontend/leptos-app/: Cargo.toml
frontend/leptos-app/src/components/: liquidity_pool.rs
frontend/nextjs/: package.json
frontend/nextjs/rust-api/: Cargo.toml
frontend/nextjs/rust-api/src/: lib.rs  liquidity.rs
pallets/atomic_swap/src/: lib.rs
pallets/cross_chain/src/: lib.rs
pallets/liquidity/src/: lib.rs
src/: lib.rs
src/error/bridge/: mod.rs
src/pallet/: lib.rs  liquidity_pallet.rs
