[workspace]
members = [
    "node",
    "runtime",
    "pallets/liquidity",
    "pallets/cross_chain",
    "pallets/atomic_swap",
    "telemetry",
]
resolver = "2"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
